# html-chunking

./: .gitignore  common.py  dspy_modules.py  enrich_node.py  main.py  parse_html.py  process_document.sh  pyproject.toml  summarize_and_split.py  train_dspy_modules.py
src/: process.py
src/content_extraction/: __init__.py  common_std_io.py  do_ocr.py  dspy_modules.py  enrich_node.py  extract_from_pptx.py  file_handlers.py  fix_ocr.py  parse_html.py  semantic_chunk_html.py  split_and_create_digest.py  summarize_and_split.py  train_dspy_modules.py
src/scripts/: process_document.sh
tests/: comprehensive_test.md  comprehensive_test_formatted.md  conftest.py  example.html  example.json  example2.html  example2.json  test_section_parser.py  test_section_parser_implementation.py  test_semantic_chunk_html.py
