[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "content_extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "db-dtypes>=1.4.3",
    "dspy>=2.6.27",
    "google-cloud-bigquery>=3.34.0",
    "jupyterlab>=4.4.4",
    "lxml>=6.0.0",
    "marker-pdf>=1.8.1",
    "pandas>=2.3.0",
    "pytest>=7.0.0",
    "ruff>=0.12.4",
    "snakeviz>=2.2.2",
]
